--- a/INSTALLATION.org
+++ b/INSTALLATION.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-21>
+#+DATE: Time-stamp: <2015-07-24>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -31,7 +31,7 @@ only implemented for GNU-Linux systems.
 ** Short instructions
 *** For Windows systems without the Emacs editor
 Download the latest archive
-~ansys-mode-16.1.2.emacs-24.5-bin-i686-mingw32.zip~ with binaries of
+~ansys-mode-161-2.emacs-24.5-bin-i686-mingw32.zip~ with binaries of
 Emacs-24.5 (bundled with a pre-configured ANSYS-Mode) at [[https://github.com/dieter-wilhelm/ansys-mode/releases][GitHub]] and
 unpack it anywhere on your system (you do not need administrator
 rights).  For the next steps please read
@@ -39,7 +39,7 @@ rights).  For the next steps please read
 
 *** For existing Emacs installations on either Windows and GNU-Linux
 
-Download the latest ANSYS-Mode archive ~ansys-mode-16.1.2.tar.xz~ from
+Download the latest ANSYS-Mode archive ~ansys-mode-161-2.tar.xz~ from
 above GitHub releases page.
 
 **** Direct ways, no configuration necessary
@@ -75,18 +75,19 @@ be automatically applied for all files with suffixes `.mac', `.ans',
 #+BEGIN_SRC emacs-lisp
   (add-to-list 'load-path "C:\\DIRECTORY-PATH\\WHERE\\THE\\ANSYS-MODE\\FILES\\RESIDE")
   ;;  Windows directory: Assuming you extracted the files on drive "c:":
-  ;; "c:\\emacs-24.5\\share\\emacs\\24.5\\site-lisp\\ansys-mode-16.1.2"
+  ;; "c:\\emacs-24.5\\share\\emacs\\24.5\\site-lisp\\ansys-mode-161-2"
   ;; Linux directory example:
-  ;; "/usr/local/src/emacs/emacs-24.5/site-lisp/ansys-mode-16.1.2"
+  ;; "/usr/local/src/emacs/emacs-24.5/site-lisp/ansys-mode-161-2"
 
   (load-file "A-M.el")
 #+END_SRC
 
 ** Verbose installation instructions
-The version scheme is a mixture of the ANSYS release (currently
-"16.1") on which the highlighting and completing code is based and the
-version increments (currently "2") of ANSYS-Mode (thus "16.1.2" for
-this particular release).
+The version scheme is a mixture of the ANSYS release (currently "161")
+on which the highlighting and completing code is based and the version
+(currently "2") of ANSYS-Mode, thus "161-2" for this particular
+release (the dash is to distinguish from ANSYS update versions like
+150.7, etc.).
 
 ** Windows
 
@@ -116,7 +117,6 @@ own init file, then default.el is not loaded any longer.
 In case you want to download or have already installed the [[http://ftp.gnu.org/pub/gnu/emacs/][original
 version]] of GNU Emacs, you can also download and configure the
 ANSYS-Mode package separately. Please refer to below instructions.
-
 
 *** Direct way, no configuration necessary (loading `by hand')
 
@@ -260,11 +260,11 @@ your system.
 
 You might install Emacs with your system's packaged manager or compile
 it yourself with the source archive
-~ansys-mode-16.1.2.emacs-24.5.tar.xz~ from [[https://github.com/dieter-wilhelm/ansys-mode/releases][GitHub]], unpack it somewhere
+~ansys-mode-161-2.emacs-24.5.tar.xz~ from [[https://github.com/dieter-wilhelm/ansys-mode/releases][GitHub]], unpack it somewhere
 and type in an terminal:
 
    #+BEGIN_SRC sh
-   tar -xJvf ansys-mode-16.1.2.emacs-24.5.tar.xz
+   tar -xJvf ansys-mode-161-2.emacs-24.5.tar.xz
    cd emacs-24.5/
    ./configure
    make
@@ -278,7 +278,6 @@ your system.
    #+BEGIN_SRC sh
    make install
    #+END_SRC
-
 
 *** RHEL (6)
 **** Required libraries
@@ -311,7 +310,20 @@ your system.
      - libmagickwand-dev (for imagemagick support)
 
 
-** Installing ANSYS (15.0.7) on Debian 8 Jessie, Ubuntu
+** Installing ANSYS 161 on Ubuntu 12.04 64 Bit
+   Help Viewer is running out of the box
+** Classics GUI
+   - Shared library libXm.so.4 is missing
+     /usr/ansys_inc/v161/ansys/bin/linx64/ansys.e161: error while
+     loading shared libraries: libXp.so.4: cannot open shared object
+     file: No such file or directory
+
+    then go to the directory /usr/lib/x86_64-linux-gnu/ and
+    #+BEGIN_SRC sh :dir /sudo::/usr/lib/x86_64-linux-gnu/
+    l -s libXp.so.4 ../libXp.so.4
+    #+END_SRC
+
+** Installing ANSYS 150.7 on Debian 8 Jessie 64 Bit
    Only the mechanical stuff needs already 20 Gig installation space!
    There is a lot of WorkBench stuff aisol/, Framework/, etc.
 
@@ -385,7 +397,7 @@ your system.
   - doc/A-M_APDL_reference.pdf -- APDL and ANSYS-Mode syntax highlighting reference guide
   - doc/ANSYS.Parametric.Design.Language.Guide.pdf -- The original APDL Guide
   - matlib/ -- a directory with examples of APDL material definitions
-  # - helper/tools/bin/ansys-mode-16.1.2.sh -- A wrapper for calling Emacs
+  # - helper/tools/bin/ansys-mode-161-2.sh -- A wrapper for calling Emacs
 
   You can actually read the PDFs in Emacs as well!
 
