--- a/doc/A-M_introductory_tutorial.org
+++ b/doc/A-M_introductory_tutorial.org
@@ -1,5 +1,5 @@
 #+STARTUP: all
-#+DATE: Time-stamp: <2015-07-24>
+#+DATE: Time-stamp: <2015-07-25>
 #+bind: org-html-preamble-format (("en" "%d"))
 # #+DATE: <2013-05-22 Wed>
 # #+OPTIONS: H:1 texht:t
@@ -330,7 +330,7 @@
 #   \\Mainly the ANSYS version and its installation directory
     The mode comes pre-configured for the default installation of
     ANSYS for Win64.  If something is amiss: Please adjust
-*** the well commented configuration file /A-M.el/
+*** the well commented configuration file /ansys-config.el/
 	  :PROPERTIES:
 	  :BEAMER_env: block
 	  :BEAMER_envargs: C[T]
