--- a/INSTALLATION.org
+++ b/INSTALLATION.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-25>
+#+DATE: Time-stamp: <2015-07-27>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -373,10 +373,12 @@ your system.
 ** Files
   *Sources*:
   - ansys-mode.el: Main file
-  - ansys-config.el: The configuration file
+  - ansys-config.el: The configuration file/example
+  - ansys-initialise.el: The initialisation of system dependened stuff
   - ansys-keyword.el: Highlighting variables (built from
     helper/fontification.el)
-  - ansys-template.el: Template definitions
+  - ansys-template.el: Template definitions of APDL code, a mixture of
+    documentation and insertable snippets
   - ansys-process.el: Variables and functions related to solver processes
 
   (and possibly their compiled versions with the suffix '.elc'.  In case
@@ -387,6 +389,7 @@ your system.
   - README.org -- This file
   - NEWS.org -- News and history
   - TODO.org -- Todos and deficiencies
+  - INSTALLATION.org -- The installation notes
   - LICENSE.org -- The GPL (Gnu Public License) Version 3
   - doc/example.dat -- WorkBench example APDL solver input file
   - doc/example.anf -- ANSYS geometry neutral file example
