--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-27>
+#+DATE: Time-stamp: <2015-07-31>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -22,11 +22,12 @@
    - Do we need to set environment license variables?  When
      environment var isn't set in .profile, .bash_login nor in
      .bash_profile
+   - C-c C-j tries to send a next line in the LAST line
+   - Emacs is not asking to save macro.mac
 ** Freeze
    - list of all new functions in -bug-report
 ** Wish-list
    - option to make eww default help browser
-   - outline-minor-mode not activated by default, contradicts documentation?
    - customisation :version attribute is not clear and not defined for
      new stuff
    - We need `'' for strings and character parameters,`%' for
