--- a/TODO.org
+++ b/TODO.org
@@ -25,7 +25,8 @@
    - -send-to-ansys, -send-above copy empty regions or only comments
    - check C-c C-x for lock file!
 ** Freezep
-   - list of all new functions in -bug-report
+   - list of all new functions: bug-report.sh, remove spurious
+     defcustoms which are calculated, or leave them as last resort?
 ** Wish-list
    - We need `'' for strings and character parameters,`%' for
      parameter substitution,`(' for functions, % not yet working with
