--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-08-03>
+#+DATE: Time-stamp: <2015-08-05>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -23,7 +23,8 @@
    - -help-program-parameters obsolete
    - windows Emacs-23.1 no usable browser found!
    - -send-to-ansys, -send-above copy empty regions or only comments
-   - check C-c C-x for lock file!
+   - importing template-header into empty file doesn't change file
+     status to changed!
 ** Freezep
    - list of all new functions: bug-report.sh, remove spurious
      defcustoms which are calculated, or leave them as last resort?
