--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-08-05>
+#+DATE: Time-stamp: <2015-08-06>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -25,7 +25,7 @@
    - -send-to-ansys, -send-above copy empty regions or only comments
    - importing template-header into empty file doesn't change file
      status to changed!
-** Freezep
+** Freeze
    - list of all new functions: bug-report.sh, remove spurious
      defcustoms which are calculated, or leave them as last resort?
 ** Wish-list
@@ -47,7 +47,7 @@
    - -wb function (doesn't adjust along the decimal point)? -> align-rules-list
    - Changing license type on the fly (with C-u) for -display-license-status
    - tool tip help-echo properties for keywords!
-   - permanent saving option for -license-file, -lmutil, -program, ...
+   - permanent saving option for -license-file, -lmutil, -program, ...?
    - Check for valid license types for the solver
    - add bbdb files to emacs packages
    - license and template status line always in the first visible line
@@ -113,6 +113,7 @@
    - -dynamic-highlighting is sluggish, highlighting somehow
      retarded!!! Still??
    - constraint equations in -ansys-template.el and get functions
+   - enable hiding of geometry items in .anf files
    - fontification.el
      - add the 4 ANSYS neutral file (aux15) functions to the parameter-help,
        .anf files from DM anf export
