--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-08-06>
+#+DATE: Time-stamp: <2015-08-10>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -55,7 +55,10 @@
    - splash screen?
    - -license-status optional filters for output
    - C-c C-c checking blocks
-   - MinGWin: FindWindow +  ActivateWin + SendKeys?
+   - MinGWin: FindWindowFindWindow(CLASSNAME, WINDOWNAME)
+     + ActivateWin: SetFocus()  + SendKeys? SendKeys
+     http://www.transmissionzero.co.uk/computing/win32-apps-with-mingw/
+   https://msdn.microsoft.com/en-us/library/aa383749.aspx
    - include ../ansys/apdl macros?
    - ../apdl/start161.ans valuable?
    - add screw thread capability to WB translation
