--- a/ansys-config.org
+++ b/ansys-config.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-28>
+#+DATE: Time-stamp: <2015-08-11>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:{} arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -477,7 +477,8 @@ But the solver/interpreter is checking this server as well!?
 
   ;; adding the directory of this (loaded) file to the load-path
   (add-to-list 'load-path (file-name-directory load-file-name))
-
+  ;; setting the ANSYS-Mode install directory
+  (setq ansys-mode-install-directory (file-name-directory load-file-name))
   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
                                 ;; The End
   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
